--- a/CodeNotesInteractive/app/build.gradle
+++ b/CodeNotesInteractive/app/build.gradle
@@ -21,12 +21,13 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.google.firebase:firebase-database:11.0.4'
     implementation 'com.firebaseui:firebase-ui-database:2.2.0'
     implementation 'ai.api:sdk:2.0.7@aar'
-    implementation('ai.api:libai:1.4.8'){
+    implementation('ai.api:libai:1.4.8') {
         exclude module: 'log4j-core'
     }
     implementation 'com.google.code.gson:gson:2.3.1'
@@ -35,6 +36,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
+
+
 
 
 apply plugin: 'com.google.gms.google-services'
