--- a/CodeNotesInteractive/app/src/main/AndroidManifest.xml
+++ b/CodeNotesInteractive/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity">
+        <activity android:name=".BaseActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,6 +22,7 @@
         </activity>
         <activity android:name=".chat.ChatActivity" />
         <activity android:name=".simulation.SimulationActivity"></activity>
+        <activity android:name=".compiler.CompilerActivity"></activity>
     </application>
 
 </manifest>
