--- a/CodeNotesInteractive/app/build.gradle
+++ b/CodeNotesInteractive/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.getkeepsafe.taptargetview:taptargetview:1.11.0'
     implementation 'com.google.firebase:firebase-database:11.6.0'
     compile 'com.google.android.gms:play-services-vision:11.6.0'
     implementation 'com.firebaseui:firebase-ui-database:2.2.0'
