--- a/CodeNotesInteractive/app/src/main/AndroidManifest.xml
+++ b/CodeNotesInteractive/app/src/main/AndroidManifest.xml
@@ -21,8 +21,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".chat.ChatActivity" />
-        <activity android:name=".simulation.SimulationActivity"></activity>
-        <activity android:name=".compiler.CompilerActivity"></activity>
+        <activity android:name=".simulation.SimulationActivity" />
+        <activity android:name=".compiler.CompilerActivity" />
+        <activity android:name=".HowToActivity"></activity>
     </application>
 
 </manifest>
