--- a/CodeNotesInteractive/app/build.gradle
+++ b/CodeNotesInteractive/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     }
     implementation 'com.google.code.gson:gson:2.3.1'
     implementation 'commons-io:commons-io:2.4'
+
+    compile 'com.github.msayan:tutorial-view:v1.0.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
