--- a/CodeNotesInteractive/app/src/main/AndroidManifest.xml
+++ b/CodeNotesInteractive/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo_color_dark"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/logo_color_dark_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".BaseActivity">
