--- a/CodeNotesInteractive/app/build.gradle
+++ b/CodeNotesInteractive/app/build.gradle
@@ -38,10 +38,13 @@ dependencies {
     implementation 'commons-io:commons-io:2.4'
 
     compile 'com.github.msayan:tutorial-view:v1.0.3'
+    compile 'com.github.arcadefire:nice-spinner:1.3.1'
+    compile 'com.github.franmontiel:FullScreenDialog:1.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
+
 
 
 
