--- a/CodeNotesInteractive/app/build.gradle
+++ b/CodeNotesInteractive/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'key'
+            keyPassword 'keypassword'
+            storeFile file('C:/Users/HP/Documents/android_keystore.jks')
+            storePassword 'keystorepassword'
+        }
+    }
     compileSdkVersion 26
     defaultConfig {
         applicationId "alpay.com.codenotesinteractive"
@@ -9,17 +17,19 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.config
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
     compile 'com.android.support:design:26.1.0'
@@ -36,7 +46,6 @@ dependencies {
     }
     implementation 'com.google.code.gson:gson:2.3.1'
     implementation 'commons-io:commons-io:2.4'
-
     compile 'com.github.msayan:tutorial-view:v1.0.3'
     compile 'com.github.arcadefire:nice-spinner:1.3.1'
     compile 'com.github.franmontiel:FullScreenDialog:1.0.1'
