--- a/CodeNotesInteractive/app/build.gradle
+++ b/CodeNotesInteractive/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    signingConfigs {
+    /*signingConfigs {
         config {
             keyAlias 'key'
             keyPassword 'keypassword'
             storeFile file('C:/Users/HP/Documents/android_keystore.jks')
             storePassword 'keystorepassword'
         }
-    }
+    }*/
     compileSdkVersion 26
     defaultConfig {
         applicationId "alpay.com.codenotesinteractive"
@@ -17,14 +17,14 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        signingConfig signingConfigs.config
+        //signingConfig signingConfigs.config
         multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.config
+            //signingConfig signingConfigs.config
         }
     }
     packagingOptions {
