--- a/CodeNotesInteractive/app/build.gradle
+++ b/CodeNotesInteractive/app/build.gradle
@@ -61,7 +61,6 @@ dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.google.cloud:google-cloud-translate:1.16.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.getkeepsafe.taptargetview:taptargetview:1.11.0'
@@ -75,8 +74,13 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.3.1'
     implementation 'commons-io:commons-io:2.4'
     compile 'com.github.msayan:tutorial-view:v1.0.3'
+    compile 'com.github.wangjiegulu:RapidFloatingActionButton:1.0.3'
     compile 'com.github.arcadefire:nice-spinner:1.3.1'
     compile 'com.github.franmontiel:FullScreenDialog:1.0.1'
+    compile 'com.github.ganfra:material-spinner:1.1.0'
+    compile 'com.wdullaer:materialdatetimepicker:1.5.1'
+    compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    compile 'com.github.ganfra:material-spinner:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
