--- a/CodeNotesInteractive/app/src/main/AndroidManifest.xml
+++ b/CodeNotesInteractive/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".simulation.SimulationActivity" />
         <activity android:name=".compiler.CompilerActivity" />
         <activity android:name=".HowToActivity" />
+        <activity android:name=".studynotes.AddToDoActivity"/>
     </application>
 
 </manifest>
