--- a/CodeNotesInteractive/app/build.gradle
+++ b/CodeNotesInteractive/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     compile('com.mikepenz:aboutlibraries:5.6.7@aar') {
         transitive = true
     }
+    implementation 'com.robertlevonyan.view:CustomFloatingActionButton:2.0.4'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "com.android.support:support-annotations:26.1.0"
     compile 'com.android.support:palette-v7:26.1.0'
