--- a/CodeNotesInteractive/app/build.gradle
+++ b/CodeNotesInteractive/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    /*signingConfigs {
+    signingConfigs {
         config {
             keyAlias 'key'
             keyPassword 'keypassword'
             storeFile file('C:/Users/HP/Documents/android_keystore.jks')
             storePassword 'keystorepassword'
         }
-    }*/
+    }
     compileSdkVersion 26
     defaultConfig {
         applicationId "alpay.com.codenotesinteractive"
@@ -17,14 +17,14 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        //signingConfig signingConfigs.config
+        signingConfig signingConfigs.config
         multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            //signingConfig signingConfigs.config
+            signingConfig signingConfigs.config
         }
     }
     packagingOptions {
@@ -54,10 +54,10 @@ dependencies {
     compile('com.mikepenz:aboutlibraries:5.6.7@aar') {
         transitive = true
     }
-    implementation 'com.robertlevonyan.view:CustomFloatingActionButton:2.0.4'
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "com.android.support:support-annotations:26.1.0"
-    compile 'com.android.support:palette-v7:26.1.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
     compile 'com.android.support:design:26.1.0'
@@ -75,7 +75,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.3.1'
     implementation 'commons-io:commons-io:2.4'
     compile 'com.github.msayan:tutorial-view:v1.0.3'
-    compile 'com.github.wangjiegulu:RapidFloatingActionButton:1.0.3'
     compile 'com.github.arcadefire:nice-spinner:1.3.1'
     compile 'com.github.franmontiel:FullScreenDialog:1.0.1'
     compile 'com.github.ganfra:material-spinner:1.1.0'
@@ -86,14 +85,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
-
-
-
-
-
-
-
-
-
 
 apply plugin: 'com.google.gms.google-services'
