--- a/CodeNotesInteractive/app/build.gradle
+++ b/CodeNotesInteractive/app/build.gradle
@@ -1,14 +1,6 @@
 apply plugin: 'com.android.application'
 
 android {
-    /*signingConfigs {
-        config {
-            keyAlias 'key'
-            keyPassword 'keypassword'
-            storeFile file('C:/Users/HP/Documents/android_keystore.jks')
-            storePassword 'keystorepassword'
-        }
-    }*/
     compileSdkVersion 26
     defaultConfig {
         applicationId "alpay.com.codenotesinteractive"
@@ -17,14 +9,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        //signingConfig signingConfigs.config
         multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            //signingConfig signingConfigs.config
         }
     }
     packagingOptions {
@@ -59,14 +49,15 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "com.android.support:support-annotations:26.1.0"
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.firebaseui:firebase-ui-auth:3.2.2'
     implementation 'com.android.support:support-v4:26.1.0'
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.getkeepsafe.taptargetview:taptargetview:1.11.0'
-    implementation 'com.google.firebase:firebase-database:11.6.0'
-    compile 'com.google.android.gms:play-services-vision:11.6.0'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
+    compile 'com.google.android.gms:play-services-vision:11.8.0'
     implementation 'com.firebaseui:firebase-ui-database:2.2.0'
     implementation 'ai.api:sdk:2.0.7@aar'
     implementation('ai.api:libai:1.4.8') {
@@ -85,6 +76,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
+
 
 
 apply plugin: 'com.google.gms.google-services'
