--- a/CodeNotesInteractive/app/build.gradle
+++ b/CodeNotesInteractive/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.google.android.gms:play-services-vision:11.8.0'
+    compile 'com.google.firebase:firebase-messaging:11.8.0'
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
     implementation 'com.firebaseui:firebase-ui-database:2.2.0'
     compile 'com.google.blockly.android:blocklylib-vertical:0.9-beta.20171003'
     implementation 'ai.api:sdk:2.0.7@aar'
@@ -75,7 +77,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
-
-
 
 apply plugin: 'com.google.gms.google-services'
