--- a/interactiveexperiments-android/app/build.gradle
+++ b/interactiveexperiments-android/app/build.gradle
@@ -6,13 +6,13 @@ android {
         applicationId "alpay.com.interactiveexperiments"
         minSdkVersion 18
         targetSdkVersion 27
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 3
+        versionName "1.0.2"
         multiDexEnabled true
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -52,7 +52,6 @@ dependencies {
     compile 'com.android.support:design:27.0.2'
     compile 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.android.support:recyclerview-v7:27.0.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.google.android.gms:play-services-vision:11.8.0'
     compile 'com.google.firebase:firebase-messaging:11.8.0'
@@ -67,7 +66,6 @@ dependencies {
     implementation 'commons-io:commons-io:2.4'
     compile 'com.github.msayan:tutorial-view:v1.0.3'
     compile 'com.github.arcadefire:nice-spinner:1.3.1'
-    compile 'com.github.franmontiel:FullScreenDialog:1.0.1'
     compile 'com.github.ganfra:material-spinner:1.1.0'
     compile 'com.wdullaer:materialdatetimepicker:1.5.1'
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
