--- a/interactiveexperiments-android/app/build.gradle
+++ b/interactiveexperiments-android/app/build.gradle
@@ -2,12 +2,13 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "alpay.com.interactiveexperiments"
         minSdkVersion 18
         targetSdkVersion 27
-        versionCode 3
-        versionName "1.0.2"
+        versionCode 4
+        versionName "1.0.3"
         multiDexEnabled true
     }
     buildTypes {
